<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/mainColor"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_default_person" />

            <TextView
                android:id="@+id/tv_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/iv_user"
                android:src="@drawable/ic_default_person"
                android:text="@string/login_tips"
                android:textColor="@color/white"
                android:textSize="@dimen/text_sp_24" />
        </LinearLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/mine"
            android:textColor="@color/white"
            android:textSize="@dimen/title_sp_26" />

        <com.sky.kotlinstudy.widget.supertv.SuperTextView
            android:id="@+id/item_my_integral"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/top_layout"
            app:sLeftIconRes="@drawable/ic_mine"
            app:sLeftTextString="@string/my_integral"
            app:sRightIconRes="@drawable/ic_next" />

        <com.sky.kotlinstudy.widget.supertv.SuperTextView
            android:id="@+id/item_integral_sort"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/item_my_integral"
            app:sLeftIconRes="@drawable/ic_mine"
            app:sLeftTextString="@string/integral_sort"
            app:sRightIconRes="@drawable/ic_next" />

        <com.sky.kotlinstudy.widget.supertv.SuperTextView
            android:id="@+id/item_my_collect"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/item_integral_sort"
            app:sLeftIconRes="@drawable/ic_mine"
            app:sLeftTextString="@string/my_collect"
            app:sRightIconRes="@drawable/ic_next" />

        <com.sky.kotlinstudy.widget.supertv.SuperTextView
            android:id="@+id/item_history"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/item_my_collect"
            app:sLeftIconRes="@drawable/ic_mine"
            app:sLeftTextString="@string/history"
            app:sRightIconRes="@drawable/ic_next" />

        <com.sky.kotlinstudy.widget.supertv.SuperTextView
            android:id="@+id/item_setting"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/item_history"
            app:sLeftIconRes="@drawable/ic_mine"
            app:sLeftTextString="@string/system_setting"
            app:sRightIconRes="@drawable/ic_next" />
    </RelativeLayout>

</ScrollView>